--- a/jiakaobaodian/pages/video/video.wxml
+++ b/jiakaobaodian/pages/video/video.wxml
@@ -1,2 +1,6 @@
-<!--pages/video/video.wxml-->
-<text>pages/video/video.wxml</text>
+<!--index.wxml-->
+<view class="container">
+  <view  bindtap="bindViewTap" class="userinfo">
+  	<video src="{{videoSrc}}" autoplay="true"></video>
+  </view>
+</view>
